[gd_scene load_steps=4 format=3 uid="uid://do0a3s15lltjj"]

[ext_resource type="Script" path="res://main_menu_page/skill_tree_page/skill_tree_main_page.gd" id="1_2v4lq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qf38g"]
bg_color = Color(0.0509804, 0.623529, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5vbo"]

[node name="SkillTreeMainPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_2v4lq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qf38g")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "PUSH"

[node name="PushButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b5vbo")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qf38g")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "LEG"

[node name="LegButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b5vbo")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qf38g")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "PULL"

[node name="PullButton" type="Button" parent="VBoxContainer/HBoxContainer2/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b5vbo")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qf38g")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "CORE"

[node name="CoreButton" type="Button" parent="VBoxContainer/HBoxContainer2/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5vbo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b5vbo")
